I've made add, find, and now trying to make delete

--- a/todo.org
+++ b/todo.org
@@ -116,3 +116,18 @@ int + unsigned char-указатель на 1 элемент, нужно в са
 при просмотре длины строки можно делать сразу +=2, при просмотре числа тоже
 
 при записи на диск можно просто не менять структуру дерева - это будет очень просто и к тому же не затратно по времени
+
+окончание самой последней команды - проверить правильность выполнения
+
+при поиске я буду получать или самый правый + 1 элемент, то есть он не будет указывать ни на что
+или указывать на элемент, вместо которого нужно будет поставить наш элемент, или это будет просто левая ветка
+
+добавить если будет время: начало элементов и тогда добавлять нужно будет в середину с началат т д
+
+блять этот мердж и сплит своевременный это пиздец:
+нужно как-то подгадать их
+если при адде всё сплитить наверх, то тогда при удалении какого-то там элемента придётся всё вниз мерджить
+но можно не делать ни того, ни другого, или только одно, а потом рекурсивно подниматься и делать, если надо
+можно при добавлении только сплитить сверху вниз типа
+и при удалении мерджить сверху вниз
+или всё это делать в конце, но тогда это всё дублируется
