delete added, compilation errors remain

--- a/todo.org
+++ b/todo.org
@@ -4,7 +4,7 @@
 
 на 1 элемент и его положение в массивах ссылаются:
     1. 2 элемента из связного списка для переноса строк
-    2. ребёнок правый
+    2. ребёнок левый
 1 элемент ссылается на:
     1. 2 элемента из связного списка для переноса строк
     2. строку со значением
